# metamath-vspa

./: .gitignore  README.md
.github/workflows/: ci.yml
examples/: .metamath.json  eengtrkg.mmp
metamath-lsp/: Cargo.toml
metamath-lsp/src/: definition.rs  diag.rs  hover.rs  inlay_hints.rs  main.rs  outline.rs  references.rs  rope_ext.rs  server.rs  show_proof.rs  types.rs  unify.rs  util.rs  vfs.rs
metamath-lsp/src/proof/: main.rs  mod.rs  proof_rope.rs  rope_position.rs  step.rs  worksheet.rs  worksheet_tests.rs
metamath-lsp/src/prover/: context.rs  mod.rs  proof_step.rs
metamath-lsp/src/prover/tactics/: apply.rs  assumption.rs  mod.rs  sorry.rs  try.rs
metamath-mmp/: Cargo.toml
metamath-mmp/src/: lib.rs  main.rs  worksheet.rs
metamath-vscode/: .vscodeignore  README.md  metamath-language-configuration.json  metamath-proof-language-configuration.json  package-lock.json  package.json  tsconfig.json
metamath-vscode/src/: extension.ts
metamath-vscode/syntaxes/: metamath-proof.tmLanguage.json  metamath.tmLanguage.json
