[package]
name = "mm-lsp-server"
version = "0.1.0"
authors = ["Thierry Arnoux"]
edition = "2021"
description = "MM/MMP language server"
repository = "https://github.com/tirix/vsmmpa"
readme = "README.md"
license = "CC0-1.0"
keywords = ["theorem", "proving", "proof", "assistant"]
categories = ["command-line-utilities", "development-tools", "mathematics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
metamath-knife = { git = "https://github.com/david-a-wheeler/metamath-knife", tag = "v0.3.3" }
lsp-server = "0.5"
lsp-types = "0.92"
xi-rope = "0.3"
crossbeam = "0.8"
futures = { version = "0.3", features = ["thread-pool"] }
annotate-snippets = "0.9"
clap = "2.33"
serde = "1.0"
serde_json = "1.0"
serde_repr = "0.1"
pathdiff = "0.2"
lazy_static = "1.4"
simplelog = "0.11"
log = "0.4"

# Specific to proofs
regex = { version = "1.5", default-features = false, features = ["std", "perf"] }
memchr = "2.4"

[[bin]]
name = "mm-lsp-server"
path = "src/main.rs"
doc = false